# halcon_test

./: README.md
show_2d/: augment_images.cpp  calculate_feature_set.cpp  calculate_lines_gauss_parameters.cpp  camera_parameters.cpp  check_dl_devices.cpp  check_hand_eye_calibration_input_poses.cpp  convert_decoded_string_code39_to_code32.cpp  debug_find_surface_model.cpp  deep_counting.cpp  deep_ocr.cpp  determine_dl_model_detection_param.cpp  dev_close_window_dict.cpp  dev_disp_button.cpp  dev_display_data_code_2d_print_quality_results.cpp  dev_display_ncc_matching_results.cpp  dev_display_pie_chart.cpp  dev_display_shape_matching_results.cpp  dev_open_window_fit_image.cpp  dev_open_window_fit_size.cpp  dev_resize_window_fit_image.cpp  dev_resize_window_fit_size.cpp  dev_update_on.cpp  disp_3d_coord_system.cpp  disp_continue_message.cpp  disp_end_of_program_message.cpp  dl_classification.cpp  dl_dataset.cpp  dl_evaluation.cpp  dl_postprocessing.cpp  dl_preprocessing.cpp  dl_training.cpp  dl_visualization.cpp  estimate_camera_parameters_from_object_model_3d.cpp  estimate_progress.cpp  gen_arrow_contour_xld.cpp  gen_confusion_matrix.cpp  get_custom_features.cpp  get_hom_mat2d_from_matching_result.cpp  get_sheet_of_light_calib_object_dimensions.cpp  grade_data_code_2d.cpp  (+18 more)
show_3d/: CMakeLists.txt  disp_message.cpp  main.cpp  set_display_font.cpp  visualize_object_model_3d.cpp
show_3d_obj/: camera_parameters.cpp  dev_update_off.cpp  main.cpp
